css/styles-app.css
/*--------------------------------------------------------- 
# Nav
---------------------------------------------------------*/

nav {
  background-color: var(--light_blue);
  height: 15%;
  min-height: 120px;
}



.logo {
  height: 75px;
}

.account {
  height: 75px;
  width: 75px;
  background-color: var(--white);
  border-radius: 50%;
  margin-right: 5%;
  background-image: url(../assets/artists/pog.PNG);
  background-position: center;
  background-size: 100px;
}

.navbar-toggler {
  height: 65px;
  width: 65px;
  border-style: none;
  margin-left: 5%;
  background-color: var(--gray);
  font-size: 32px;
  display: flex;
}

.navbar-brand {
  margin: 0px;
}

.navbar-toggler-icon {
  color: white;
  justify-content: center;
  align-self: center;
}

.navbar_flex {
  display: flex;
  justify-content: center;
}

/*--------------------------------------------------------- 
# Footer
---------------------------------------------------------*/

.footer {
  background-color: var(--darkest_teal);
  height: 200px;
  color: white;
  padding: 1em;
}

.tim_svg {
  height: 5vh;
}

.footer_text {
  max-width: 20em;
  margin: 0px;
}

.tim_svg_div {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 2em;
}

.footer_text_div {
  display: flex;
  justify-content: center;
  align-items: center;
}

/*--------------------------------------------------------- 
# Searchbar
---------------------------------------------------------*/
.searchbar_group {
  margin-top: 8.5em;
}

.form_control {
  max-width: 100px;
}

.btn.active {
  background-color: var(--dark_teal);
  border-color: var(--dark_teal);
}

.btn-outline-success {
  --bs-btn-active-bg: var(--dark_teal);
}

.filters {
  margin-top: 1em;
  overflow-x: hidden;
  min-width: 720px;
}

ul {
  list-style-type: none;
  margin: 0px;
  padding: 0px;
}

li {
  display: inline;
}

.search_button {
  border: none;
  background-color: rgba(255, 255, 255, 0);
}

.btn-outline-secondary {
  border-style: none;
}

.input-group> :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
}

